--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "barber-shop-backend",
+  "name": "backend",
   "version": "1.0.0",
   "description": "Node.js REST API",
   "main": "src/server.ts",
@@ -26,7 +26,7 @@
     "schema": "src/database/prisma/schema.prisma"
   },
   "dependencies": {
-    "@prisma/client": "^4.8.1",
+    "@prisma/client": "^5.4.2",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -56,7 +56,7 @@
     "eslint-plugin-n": "^15.6.0",
     "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^2.0.20",
-    "prisma": "^4.8.1",
+    "prisma": "^5.4.2",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
